src/test/fail/missing_parenth.lly
#[
SyntaxError: Unexpected token 'end of file'.
Where: File "test/fail/missing_parenth.lly" at line 6
]#

var a: integer = 0   a = ((a)
